--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^17.0.47",
+    "@types/react-dom": "^18.0.5",
     "framer-motion": "^6.2.8",
     "panelsnap": "^1.3.0",
     "react": "^17.0.2",
-    "react-animated-progress-bar": "^1.0.4",
+    "react-animated-progress-bar": "^1.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
